# trading-view-bot

./: replit.md  requirements.txt
Python/: Daily_Report_2026-01-16.xlsx  PROJECT_STRUCTURE_OVERVIEW.txt  bot_state.json  main.py  market_state.xlsx  paper_trades.xlsx  post_market_learning.xlsx  pyproject.toml  risk_and_drawdown.xlsx  signal_analysis.xlsx  trading_bot_audit.db
Python/Python/: index.html
Python/Python/attached_assets/: Pasted-MASTER-PROMPT-FULL-SYSTEM-REBUILD-PAPER-TRADING-TRADING_1768040663034.txt
Python/Python/the/: dashboard_api.py  excel_manager.py  market_data_and_signal.py  session_engine.py  state_manager.py  trade_execution_and_mode.py  trade_management_and_risk.py
Python/the/: event_logger.py  telegram_reporter.py
attached_assets/: Pasted-This-task-is-to-FIX-the-dashboard-preview-Do-not-change_1768564003205.txt  Pasted-This-task-is-to-RESTORE-LIVE-BOT-DATA-FLOW-to-the-dashb_1768564670516.txt
