[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-telegram-bot>=22.5",
    "pytz>=2025.2",
    "the>=0.1.5",
    "uvicorn>=0.40.0",
]
